--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,7 @@ website:
         text: Ed Discussions
       - href: https://www.gradescope.com/courses/691361
         text: Gradescope
+  google-analytics: "G-63SKKDGFHG"
     # tools:
     #   - icon: linkedin
     #     href: https://twitter.com
