--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,8 @@
 project:
   type: website
   output-dir: docs
+  resources: 
+    - "/assignments/data/*"
 
 website:
   title: "IDS705: Principles of Machine Learning"
@@ -33,7 +35,13 @@ website:
           - schedule.qmd
           - contacts.qmd
           - pedagogy.qmd
+          - tools.qmd
+      - section: "Assignments"
+        contents:
+          - assignments/assignment1.qmd
       - section: "Resources"
+        contents:
+          - notebooks/assignment_instructions.ipynb
           
 format:
   html:
