--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ project:
     - "*.qmd"
     - "*.ipynb"
     - "!assignments/*"
+    - "!archive/*"
 
 website:
   title: "IDS705: Principles of Machine Learning"
