posted lecture slides

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ project:
     - "*.ipynb"
     - "!assignments/*"
     - "!archive/*"
+    - "!lectures/*"
 
 website:
   title: "IDS705: Principles of Machine Learning"
