--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,6 +44,7 @@ website:
           - contacts.qmd
           - pedagogy.qmd
           - tools.qmd
+          - project.qmd
       # - section: "Assignments"
       #   contents:
       #     - assignments/assignment1.qmd
